kasten/k10-generate-gold-backup-policy/.chainsaw-test/chainsaw-step-03-apply-4.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k10-gp-ns04
