kasten/k10-generate-gold-backup-policy/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: k10-generate-gold-backup-policy
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: ../k10-generate-gold-backup-policy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1.yaml
    - apply:
        file: chainsaw-step-03-apply-2.yaml
    - apply:
        file: chainsaw-step-03-apply-3.yaml
    - apply:
        file: chainsaw-step-03-apply-4.yaml
    - apply:
        file: chainsaw-step-03-apply-5.yaml
    - apply:
        file: chainsaw-step-03-apply-6.yaml
    - apply:
        file: chainsaw-step-03-apply-7.yaml
    - apply:
        file: chainsaw-step-03-apply-8.yaml
  - name: step-04
    try:
    - assert:
        file: generated-policy.yaml
    - error:
        file: not-generated-policy.yaml
  - name: step-05
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n k10-gp-ns01
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n k10-gp-ns02
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n k10-gp-ns03
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n k10-gp-ns04
